--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -411,7 +411,7 @@ nav.breadcrumb_wrap {
     }
     .no_table_data_found {
         width: 100%;
-        min-height: 150px;
+        min-height: 300px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -522,11 +522,11 @@ nav.breadcrumb_wrap {
         }
     }
     @media only screen and (max-width: 767px) {
-        & > ul li a{
-            width: 30px;
-            height: 30px;
-        }
-        .arrow_wrap{
+        & > ul li {
+            a{
+                width: 30px;
+                height: 30px;
+            }
             &.previous {
                 margin-right: 14px;
             }
@@ -547,6 +547,17 @@ nav.breadcrumb_wrap {
     fill: $neutral_8;
     font-size: 12px;
     font-family: "IBM Plex Sans", sans-serif !important;
+}
+.apexcharts-yaxis .apexcharts-yaxis-title,.apexcharts-xaxis .apexcharts-xaxis-title {
+    font-size: 14px;
+    @media only screen and (max-width: 767px) {
+        font-size: 12px;        
+    }
+}
+.apexcharts-xaxis .apexcharts-xaxis-title{
+    @media only screen and (max-width: 767px) {
+        display: none;        
+    } 
 }
 .required_star {
     color: red;
