--- a/src/assets/scss/customstyle/_header_style.scss
+++ b/src/assets/scss/customstyle/_header_style.scss
@@ -17,24 +17,16 @@ header{
             .logo {
                 img{
                     height: 50px;
+                    max-width: 100%;
+                    height: auto;
                 }
             }
         }
         @media only screen and (max-width: 767px) {
             width: 110px !important;
-            .logo {
-                img{
-                    height: 35px;
-                }
-            }
         }
         @media only screen and (max-width: 420px) {
             width: 90px !important;
-            .logo {
-                img{
-                    height: 28px;
-                }
-            }
         }
     }
     .header_language_drop{
