--- a/src/assets/scss/customstyle/_procurement.scss
+++ b/src/assets/scss/customstyle/_procurement.scss
@@ -2297,6 +2297,16 @@ input[type="number"]{
                         &.hide{
                             font-size: 0;
                         }
+                        &:not(.hide){
+                            background: rgb(6, 6, 150, 0.7);
+                            color: #fff;
+                            i{
+                                display: none;
+                            }
+                        }
+                        span{
+                            justify-content: center;
+                        }
                     }
                 }
                 &:not(:first-child){
@@ -2307,9 +2317,6 @@ input[type="number"]{
                     }
                 }
             }
-        }
-        tbody {
-            height: 350px;
         }
     }
 }
