changes related to role and permisions

--- a/src/assets/scss/customstyle/_common_style.scss
+++ b/src/assets/scss/customstyle/_common_style.scss
@@ -608,3 +608,9 @@ nav.breadcrumb_wrap {
 //         }
 //     }
 // }
+
+
+.custom-checkbox{
+    border: 2px solid #ced4da;
+    border-radius: 4px;
+}
