--- a/src/assets/scss/customstyle/_main_style.scss
+++ b/src/assets/scss/customstyle/_main_style.scss
@@ -184,6 +184,12 @@
         @include font($font-weight-normal,14px,normal,$neutral_5);
         margin-bottom: 14px;
     }
+    .box_title {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
     .box_bottom_text{
         @include font($font-weight-normal,12px,normal,$neutral_5);
         margin-bottom: 14px;
@@ -431,6 +437,12 @@
         }
     }
     &.vendor_dashboard_wrapper{
+        .card {
+            .card-body{
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+        }
         .sh_box_wrap{
             flex-wrap: wrap;
             gap: 15px;
@@ -439,6 +451,8 @@
                 background: $neutral_1;
                 width: calc(50% - 8px);
                 padding: 6px 12px;
+                display: flex;
+                flex-direction: column;
                 .count {
                     font-weight: 700;
                     font-size: 20px;
@@ -467,6 +481,12 @@
                     }
                 }
             }
+        }
+        .sh_inquiry_rate {
+            margin-top: auto;
+        }
+        .sh_dashboar_table_wrap{
+            margin-top: 10px;
         }
     }
 }
